Using different method of launching process